- 마크다운 가이드 작성
- static 파일들에 버전 추가

2023/2/20
- 지원페이지 '기타' 기능 추가
- textarea 자동 높이조절 기능 추가
- refresh.sh 작성
- 관리페이지 시간대를 UTC+9(KST)로 수정
- 지원서 제출 가능한지 여부 측정 구체화
- 소개페이지 홍보문구에 html 사용 가능하도록 수정
- 관리페이지 본인 동아리 배너 확인기능 추가

2023/2/23
- 로그인 api 데이터 처리 과정 수정
- 부장이 지원서 확인할 수 있도록 하는 기능 추가
- 로그인 실패 문구 추가

2023/2/24
- 지원서 제출 날짜 표시
- 모바일 레이아웃 개선
- 지원페이지 required 기능 지원

2023/2/25
- 동아리 관리 페이지에서 지원 시간 모바일에서 설정 못하던 오류 해결 (유엔아이 부장님 제보 감사용)

2023/2/27
- 2차 면접시간 사이트 초안 제작
- 홈 배너에 동아리 이름 하양색으로 변경 가능하도록 수정

2023/2/28
- 카카오톡 및 인스타 DM에서 미리보기 이미지 추가
- Google Search Console에 사이트 등록
- 관리자용 비밀번호 변경 사이트 추가

2023/3/1
- 구글폼에서 줄바꿈한 대로 지원서에서 줄바꿈이 되지 않던 오류 해결 (Ph.D 부장 제보 ㄳ)

2023/3/2
- '개인정보를 처리하는 방법' 및 '문의하기' 내용 업데이트
- input[type=checkbox]에서 required 적용 관련 오류, 임시로 required 적용 예외처리 시킴
- 지원서 목록 페이지에 전화번호 노출
- 동아리 부원 기능 추가, 부원들이 지원서 볼 수 있도록 수정 (부장이 동아리 관리 페이지에서 부원 추가 및 삭제 가능)

2023/3/3
- RoDeLa 4.0 갓 건우선배 피드백 적용
  - 최상단 헤더의 이미지 클릭 시 '홈' 메뉴로 이동
  - 소개페이지 사진 크기가 너비&높이에 모두 맞추도록 수정
  - 소개페이지 사진 애니메이션 잔상이 남던 버그 해결
  - 소개페이지 모바일 전환 기준 수정 (768px -> 1024px)
  - 소개페이지 모바일에서 소개글이 body 전체 사용하도록 수정 (+ 모바일용 정적 배경 삽입)
- iOS Safari에서 z-index 적용 안되는 오류 해결 (-webkit-transform)

2023/3/4
- 메인화면 배너 자동으로 넘어가게 수정
- 하단 nav에서 현재 선택된 동아리로 자동 스크롤되도록 수정
- 소개페이지 콘솔창에 출력되던 테스트 문구 제거
- 홈에 들어올 때마다 배너 넘어가는 타이머가 새로 추가되던 오류 수정

2023/3/5
- 하단 nav에서 화면 밖에 있는 동아리로 스크롤할 때 화면 전체가 밀리던 버그 수정
- 지원하기 버튼 디자인 일부 수정
- 가입할 때 중복 계정 존재할 시 문의하기 링크로 로델라 문의 링크 뜨던 오류 수정

2023/3/6
- 메인 페이지 디자인 일부 수정, 1차 결과 표시 칸 생성
- 지원서 목록(부원용)에서 기본값으로 취소한 지원서는 가림. 대신 '취소한 지원서도 보기' 링크를 맨 뒤에 달아둠.
- 1차 합격 추가, 메인 페이지에서 결과 확인 가능
- 1차 합격자 선택(부장용) 페이지 추가 및 관련 기능 추가
- 모든 지원서 내용 복사하기 페이지(부장용) 추가

2023/3/7
- 1차 결과 문구 수정 (탈락 -> 불합격)
- 2차 면접 시간 등록 페이지(부장용) 추가
- 2차 면접 선택 페이지 활성화

2023/3/8
- 메인페이지에 면접 관련 내용 추가, 면접 시간 맨 위로
- 면접시간 설정 페이지(부장용) 자동완성 오류 수정
- 면접시간 보기 페이지(부원용) 추가

2023/12/30
- 수정 사항 없음(아직은)
- 테스트 중

2024/02/05 -- 2024 동아리 모집 사이트 운영 시작
- 회원가입시 개인정보 처리 동의서 확인 체크박스 도입
- 각종 로고 svg(벡터)로 전환
- 문의하기 링크 및 정보 변경
- TimeModel 데이터 구조 신설 (면접 시간용)
- 면접 시간 취소 기능 벡엔드 제작중