@@ -1,0 +1,29 @@
+# Generated by Django 4.1.5 on 2024-02-07 14:42
+
+import datetime
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('form', '0006_remove_formmodel_time_timemodel'),
+        ('about', '0010_time_data_sort'),
+    ]
+
+    operations = [
+        migrations.RemoveField(
+            model_name='clubmodel',
+            name='time_data',
+        ),
+        migrations.AlterField(
+            model_name='clubmodel',
+            name='time_start',
+            field=models.DateTimeField(default=datetime.datetime.now),
+        ),
+        migrations.AddField(
+            model_name='clubmodel',
+            name='time_data',
+            field=models.ManyToManyField(blank=True, related_name='times+', to='form.timemodel'),
+        ),
+    ]
