@@ -1,0 +1,28 @@
+# Generated by Django 4.1.5 on 2024-02-07 14:42
+
+import datetime
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('form', '0005_alter_formmodel_time'),
+    ]
+
+    operations = [
+        migrations.RemoveField(
+            model_name='formmodel',
+            name='time',
+        ),
+        migrations.CreateModel(
+            name='TimeModel',
+            fields=[
+                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
+                ('time_start', models.DateTimeField(default=datetime.datetime.now)),
+                ('time_end', models.DateTimeField(default=datetime.datetime.now)),
+                ('form', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='time_form+', to='form.formmodel')),
+            ],
+        ),
+    ]
